--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"type": "module",
 	"dependencies": {
 		"d3": "^7.8.2",
-		"lodash": "^4.17.21"
+		"lodash": "^4.17.21",
+		"roughjs": "^4.5.2"
 	}
 }
